# halley

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/actions/halley-ci/: action.yml
.github/workflows/: ci.yml  halley-ci.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
dashboard/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts
dashboard/e2e/: dashboard-ci.spec.ts  live-span.spec.ts
dashboard/src/: auth.ts  middleware.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/api/auth/[...nextauth]/: route.ts
dashboard/src/app/api/fixtures/: route.ts
dashboard/src/app/api/fixtures/[id]/: route.ts
dashboard/src/app/fixtures/: page.tsx
dashboard/src/app/fixtures/[id]/edit/: BisectPanel.tsx  CiPanel.tsx  InvariantEditor.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/runs/[id]/: LiveSpansIsland.tsx  SpanBarLink.tsx  SpanGraph.tsx  SpanGraphWrapper.tsx  SpanInspector.tsx  TurnIntoTestButton.tsx  page.tsx  useLiveSpans.ts
dashboard/src/app/settings/keys/: KeysClient.tsx  actions.ts  page.tsx
dashboard/src/app/spans/: page.tsx
dashboard/src/lib/: clickhouse.ts  runner-status.ts  session.ts  worker-queue.ts
dashboard/src/lib/halley-query/: detail.ts  index.ts  pricing.ts  runs.ts
db/clickhouse/migrations/: 20260513000001_observations.sql  20260513000002_observation_body.sql  20260513000003_pricing_versions.sql  20260513000004_pricing_seed.sql  20260515000001_openai_pricing_real_values.sql  20260520000001_observations_is_run_root.sql
db/postgres/migrations/: 20260513000001_users.sql  20260513000002_projects.sql  20260513000003_api_keys.sql  20260513000004_fixtures.sql  20260513000005_bisect_jobs.sql  20260513000006_dev_seed.sql  20260526000001_authjs_tables.sql  20260526000002_dev_user_seed.sql  20260526000003_api_keys_phase4.sql  20260531000001_fixtures_exec_context.sql  20260531000002_ci_runs.sql
docs/: ARCHITECTURE.md  DECISIONS.md  PARTNER_PROMPT.md  README.md  REVIEWER_PROMPT.md  ROADMAP.md  SCENARIO.md  fixture-format.md  running-the-loop.md
docs/diagrams/: architecture.mmd
docs/plan/: phase-1-week-1.md  phase-1-week-2.md  phase-2-overview.md  phase-2-week-3.md  phase-2-week-4.md  phase-3-overview.md  phase-3-week-5.md  phase-3-week-6.md  phase-4-overview.md  phase-5-overview.md  phase-6-overview.md
docs/quickstart/: quickstart-python.md  quickstart-typescript.md  quickstart-vercel.md
docs/research/: laminar.md  langfuse-v4.md  openllmetry-2026-migration.md  openllmetry-python-setup.md  otel-genai-semconv.md  vercel-ai-telemetry-setup.md
examples/: README.md
examples/irreversible-demo-agent/: agent-drifted.py  agent.py  halley-drifted.json  halley.config.json
examples/irreversible-demo-agent/halley/fixtures/: email-demo-hybrid-1780078801.json  email-demo.json
examples/irreversible-demo-agent/halley/fixtures/email-demo-hybrid-1780078801/bodies/: sha256-b7d841cb69c1ee53519eb9252289af1e0113fa3baaaa76e30ce5d5052979e267.json  sha256-ec463c4e664ced74508541326b4543eafce7bcb113ccb99770229be482fad965.json
examples/openai-direct-typescript/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
examples/openai-direct-typescript/src/: index.ts
examples/reasoning-agent-python/: .env.example  README.md  agent.py  answer_parser.py  api.py  requirements.txt  run.sh  technique1_self_consistency.py  technique2_cot_verify.py  technique3_refinement.py  technique4_pal.py
examples/replay-target/: README.md  halley-drifted.json  halley-irreversible-demo.json  halley-regression.json  halley-results.xml  halley.config.json
examples/replay-target/halley/fixtures/: hello-world.json  multi-span-distinct.json  reasoning-agent-math-hybrid-1780078510-hybrid-1780078597-hybrid-1780078718.json  reasoning-agent-math-hybrid-1780078510-hybrid-1780078597.json  reasoning-agent-math-hybrid-1780078510.json  reasoning-agent-math-hybrid-1780078604.json  reasoning-agent-math.json
examples/vercel-ai-app/: .env.example  .gitignore  README.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json
examples/vercel-ai-app/scripts/: test-trace.mjs
examples/vercel-ai-app/src/app/: actions.ts  layout.tsx  page.tsx
halley-canonical/: Cargo.toml
halley-canonical/src/: lib.rs
infra/: README.md
infra/clickhouse/init/: 000_create_database.sh
infra/clickhouse/migrations/: 001_observations.sql  002_observation_body.sql  003_pricing_versions.sql
infra/postgres/migrations/: 001_users.sql  002_projects.sql  003_api_keys.sql  004_fixtures.sql  005_bisect_jobs.sql
infra/postgres/seeds/: 001_dev_project.sql
infra/redis/: redis.conf
ingester/: .dockerignore  Cargo.toml  Dockerfile  README.md
ingester/fixtures/: hello-span.json
ingester/src/: auth.rs  config.rs  errors.rs  main.rs  telemetry.rs
ingester/src/domain/: canonical.rs  mod.rs  otlp_span.rs  span.rs
ingester/src/grpc/: otlp.rs
ingester/src/http/: health.rs  mod.rs  otlp.rs  spans.rs
ingester/src/normalizer/: halley_raw.rs  mod.rs  openinference.rs  openllmetry.rs  otel_genai.rs  vercel_ai.rs
ingester/src/pipeline/: ingest.rs  mod.rs  publisher.rs  writer.rs
ingester/src/storage/: clickhouse.rs
ingester/tests/: gen_otlp_fixture.rs  smoke.sh
landing/: index.html
loadtest/: k6-otlp-http.js
sdk-py/: pyproject.toml
sdk-py/halley_sdk/: __init__.py  _sitecustomize_shim.py  auto.py  canonical.py  ci_runner.py  diff_runner.py  fixture_writer.py  invariants.py  junit.py  recorder.py  replayer.py  schema_inference.py
sdk-py/tests/: test_canonical.py  test_cost_invariant.py  test_irreversible_guard.py  test_replay.py  test_rust_parity.py  test_schema_inference.py
sdk-ts/: README.md
worker/: Dockerfile  README.md  package-lock.json  package.json
worker/scripts/: enqueue-infer.ts
worker/src/: connections.ts  heartbeat.ts  index.ts
worker/src/jobs/: bisect-run.ts  ci-run.ts  fixture-write.ts  invariant-infer.ts  runner-common.ts
worker/src/query/: bodies.ts  observations.ts  pricing.ts
(+65 files in other folders)
