[package]
name = "halley-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false
description = "Halley CLI: record, replay, diff, bisect agent regression fixtures"

[[bin]]
name = "halley"
path = "src/main.rs"

[[bin]]
name = "canonical-hash"
path = "src/bin/canonical_hash.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
