[package]
name = "halley-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false
description = "Halley CLI: record, replay, diff, bisect agent regression fixtures"

[[bin]]
name = "halley"
path = "src/main.rs"

[[bin]]
name = "canonical-hash"
path = "src/bin/canonical_hash.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"

# D22 canonical JSON + SHA-256 — single source of truth (Phase 6 Week 11 Day 1).
# Path dependency, NOT a workspace: cli/ keeps its own Cargo.lock. See D22, D54.
halley-canonical = { path = "../halley-canonical" }
