[package]
name = "halley-ingester"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false
description = "Halley ingester: OTLP receiver and ClickHouse writer (Week 1 skeleton)"

[[bin]]
name = "halley-ingester"
path = "src/main.rs"

# gRPC smoke test client — used by ingester/tests/smoke.sh Day 5 assertion.
# Connects to localhost:4317, sends the OTEL GenAI fixture, asserts success.
# See DECISIONS.md D33.
[[bin]]
name = "smoke-grpc"
path = "src/bin/smoke_grpc.rs"

[dependencies]
# HTTP server and async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors.
thiserror = "1"
anyhow = "1"

# serde_repr for Enum8 columns in ClickHouse (numeric repr required by RowBinary).
serde_repr = "0.1"

# Tracing / structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage: official ClickHouse client. 0.13.3 is the latest 0.x that
# builds on Rust 1.83 (0.14+ requires 1.89). See docs/DECISIONS.md D16.
# Feature `uuid` enables clickhouse::serde::uuid for UUID columns.
clickhouse = { version = "0.13.3", features = ["uuid"] }

# Hashing + hex encoding for cassette body hashes (Day 6).
sha2 = "0.10"
hex = "0.4"

# D22 canonical JSON + SHA-256 — single source of truth (Phase 6 Week 11 Day 1).
# Path dependency, NOT a workspace: ingester/ keeps its own Cargo.lock and its
# pinned ICU/idna/uuid tree (D21, D29) untouched. See D22, D54.
halley-canonical = { path = "../halley-canonical" }

# UUIDs: serde-only (we do not generate UUIDs in Week 1). See DECISIONS.md D2.
uuid = { version = "1", features = ["serde"] }

# Timestamps for test fixtures and log records.
chrono = { version = "0.4", features = ["serde"] }

# ---- Phase 2 (Week 3) dependencies ----

# Redis Streams pipeline. Only the features we need: async tokio driver + streams.
# 0.27.6 is the latest stable; uses edition = "2021", fine on Rust 1.85.
# See DECISIONS.md D26 for stream entry encoding rationale.
redis = { version = "0.27", features = ["tokio-comp", "streams"] }

# Postgres connection pool for API key validation (Phase 4 Day 4).
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14" }


# Stream entry encoding: bincode v1 over postcard. See DECISIONS.md D26.
bincode = "1"

# OTLP protobuf decoding (Day 3). prost 0.13 uses edition = "2021", fine on 1.85.
# opentelemetry-proto 0.27 with gen-tonic + trace gives us the pre-generated
# ExportTraceServiceRequest and related types. See DECISIONS.md D32.
prost = "0.13"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "trace", "with-serde"] }

# tonic 0.12.x — matches the version opentelemetry-proto 0.27 already pulls in
# transitively (confirmed via `cargo tree | grep tonic`). Using 0.12 avoids
# introducing a second tonic version into the dep tree. See DECISIONS.md D33.
tonic = "0.12"

# ---- Phase 2 (Week 4) dependencies ----

# Prometheus metrics. metrics 0.24 + metrics-exporter-prometheus 0.16 both
# use edition = "2021" and build cleanly on Rust 1.85. See DECISIONS.md D35.
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
# Property-based testing for normalizer adapters. See phase-2-week-3.md Day 2.
proptest = "1"
