[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "halley-sdk"
version = "0.1.0"
description = "Halley Python SDK — record/replay shim for LLM provider calls"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
